--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@ body {
 
 @layer base {
   :root {
-    --color-primary: #116DEE;
+    --color-primary: #116dee;
     --color-secondary: rgb(40, 109, 160);
     --color-sidebar: #fff;
     --color-sidebar-element-hover-background: #0ea5e9;
