--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,13 +9,13 @@ body {
 
 @layer base {
   :root {
-    --color-primary: #116dee;
-    --color-secondary: rgb(40, 109, 160);
+    --color-primary: #0F4880;
+    --color-secondary: #336E7B;
     --color-sidebar: #fff;
     --color-sidebar-element-hover-background: #0ea5e9;
     --color-sidebar-element-hover-text: #fff;
     --color-sidebar-text: #1c1917;
-    --color-sidebar-active-element-background: rgb(74, 144, 241);
+    --color-sidebar-active-element-background: var(--color-primary);
     --color-sidebar-active-element-text: #fff;
     --color-sidebar-feature: #fff;
   }
