--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -96,3 +96,11 @@ body {
     background-color: var(--color-background-dark);
   }
 }
+
+.wmde-markdown li {
+  list-style: disc;
+}
+
+.wmde-markdown li li {
+  list-style: circle;
+}
